--- a/src/Smartstore.Web/Areas/Admin/Views/QueuedEmail/_Grid.QueuedEmails.Search.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/QueuedEmail/_Grid.QueuedEmails.Search.cshtml
@@ -22,6 +22,10 @@
     <editor asp-for="SearchToEmail" asp-template="SearchExpression" />
 </div>
 <div class="form-group">
+    <smart-label asp-for="SearchSubject" />
+    <editor asp-for="SearchSubject" asp-template="SearchExpression" />
+</div>
+<div class="form-group">
     <smart-label asp-for="SearchSendManually" />
     <editor asp-for="SearchSendManually" />
 </div>
