--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -16,7 +16,8 @@
          class="cart-row" 
          attr-class='(!item.Active, "cart-item-inactive")' 
          data-key="@item.Id" 
-         data-parent-key="@item.Id">
+         data-parent-key="@item.Id"
+         attr-data-sku='(item.ShowSku, item.Sku)'>
         <div class="row">
             <div sm-if="Model.AllowActivatableCartItems && Model.IsEditable" class="select-cart-item col-auto">
                 <input name="SelectCartItem@(item.Id)" 
