--- a/src/Smartstore.Web/wwwroot/shared/_mixins.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_mixins.scss
@@ -111,12 +111,18 @@
 }
 
 @mixin fontawesome($content, $size: $icon-font-size-base, $variant: $icon-font-variant-default) {
-    display: inline-block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
+    // Copied over from FA's core stylesheet. We don't want to customize the FA core.
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    display: inline-block;
+    font-feature-settings: normal;
+    font-style: normal;
+    font-synthesis: none;
+    font-variant: normal;
     line-height: 1;
+    text-align: center;
+    text-rendering: auto;
+    width: 1.25em;
 
     font-size: $size;
     @include fontawesome-font($content, $variant);
