--- a/src/Smartstore.Web/wwwroot/lib/editors/CodeMirror/mode/liquid/liquid.css
+++ b/src/Smartstore.Web/wwwroot/lib/editors/CodeMirror/mode/liquid/liquid.css
@@ -69,12 +69,13 @@
 }
 
 /* Code hint styling */
-.cm-hint-kind-0:before,
-.cm-hint-kind-1:before,
-.cm-hint-kind-2:before,
-.cm-hint-kind-tag:before,
-.cm-hint-kind-filter:before {
-    font-family: 'Font Awesome 6 Free';
+:is(
+.cm-hint-kind-0, 
+.cm-hint-kind-1, 
+.cm-hint-kind-2, 
+.cm-hint-kind-tag, 
+.cm-hint-kind-filter)::before {
+    font-family: 'Font Awesome 7 Free';
     font-weight: 900;
     font-style: normal;
     display: inline-block;
