--- a/src/Smartstore.Web/wwwroot/shared/_fa.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_fa.scss
@@ -1,33 +1,69 @@
 /// <reference path="references.scss" />
 
+.fa-light,
+.fal,
+.fa-thin,
+.fat,
+.fa-duotone,
+.fad {
+    // Duotone and thin icons are Pro only.
+    // Copied over from FA's core stylesheet. We don't want to customize the FA core.
+    --_fa-family: var(--fa-family, var(--fa-style-family, "#{$fa-font-family-free}"));
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    display: var(--fa-display, inline-block);
+    font-family: var(--_fa-family);
+    font-feature-settings: normal;
+    font-style: normal;
+    font-synthesis: none;
+    font-variant: normal;
+    font-weight: var(--fa-style, 900);
+    line-height: 1;
+    text-align: center;
+    text-rendering: auto;
+    width: var(--fa-width, 1.25em);
+}
+
+:is(.fa-light,
+.fal,
+.fa-thin,
+.fat,
+.fa-duotone, 
+.fad)::before {
+    // Copied over from FA's core stylesheet. We don't want to customize the FA core.
+    content: var(--fa);
+    content: var(--fa)/"";
+}
+
 @if ($icon-font-size-base != 'inherit') {
-    // Specificity: DON'T combine these selectors!
-    .fa     { font-size: $icon-font-size-base; }
-    .fal    { font-size: $icon-font-size-base; }
-    .far    { font-size: $icon-font-size-base; }
-    .fas    { font-size: $icon-font-size-base; }
-    .fab    { font-size: $icon-font-size-base; }
+    // Specificity: DON'T combine these selectors and use :where instead of :is!
+    :where(.fa, .fal, .far, .fas, .fab) {
+        font-size: $icon-font-size-base;
+    }
 }
 
 @if $fa-use-pro == false {
     // Shim for light icons
+    .fa-light, 
     .fal {
-        font-family: $fa-font-family-free;
+        --fa-family: "#{$fa-font-family-free}";
     }
     
-    // FontAwesome 5 Free contains all solid, a few regular and none of the light icons.
+    // FontAwesome 7 Free contains all solid, a few regular and none of the light icons.
     // First, we degrade all variants to solid...
+    .fa-light,
     .fal,
+    .fa-regular,
     .far {
-        font-weight: 900;
+        --fa-style: 900;
     }
 
-    // ...and revert the font-weight of all free regular icons (163 in v6) to 400.
+    // ...and revert the font-weight of all free regular icons (163 in v7) to 400.
     // This way we can still use .fal or .far in our markup without determining the
     // license. Our CSS will render solid icons when the light or regular variant does not exist.
     @each $content, $name in $fa-free-regular-icons {
         :is(.fal, .far).fa-#{$name} {
-            font-weight: 400;
+            --fa-style: 400;
         }
     }
 }
@@ -37,20 +73,20 @@
         // can refer to any variant to change all icon weights
         // in one go.
         .fa {
-            font-weight: $icon-font-weight-default;
+            --fa-style: #{$icon-font-weight-default};
         }
     }
 
     .fas {
-        font-weight: map-get($icon-font-variants, solid);
+        --fa-style: #{map-get($icon-font-variants, solid)};
     }
 
     .far {
-        font-weight: map-get($icon-font-variants, regular);
+        --fa-style: #{map-get($icon-font-variants, regular)};
     }
 
     .fal {
-        font-weight: map-get($icon-font-variants, light);
+        --fa-style: #{map-get($icon-font-variants, light)};
     }
 }
 
@@ -76,5 +112,5 @@
     font-size: 10px;
     //color: #222;
     color: var(--dark);
-    text-shadow: -1px -1px 1px rgba(#fff, 1);
+    text-shadow: -1px -1px 1px rgba($white, 1);
 }
