--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
@@ -50,7 +50,7 @@
                                 @T("Admin.Permissions.DenyInherited").JsValue],
                             stateInfoTitles: [@T("Admin.Permissions.AllPermissionsGranted").JsValue,
                                 @T("Admin.Permissions.NumPermissionsGranted").JsValue,
-                                @T("Admin.Permissions.NoPermissionGranted").JsValue,]
+                                @T("Admin.Permissions.NoPermissionGranted").JsValue]
                         });
 
                         // Expand\collapse all.
@@ -203,11 +203,11 @@
         <ul>
             @foreach (var child in node.Children)
             {
-                var (numAllowed, numTotal) = PermissionTree.GetNumAllowedDescendents(child);
+                //var (numAllowed, numTotal) = PermissionTree.GetNumAllowedDescendents(child);
+                    // attr-data-state-num-on='(child.HasChildren, numAllowed.ToStringInvariant())'
+                    // attr-data-state-num-total='(child.HasChildren, numTotal.ToStringInvariant())'
                 <li data-state-id="permission-@child.Value.PermissionRecordId"
                     data-state-value="@(child.Value.Allow.HasValue ? (child.Value.Allow.Value ? 2 : 1) : 0)"
-                    attr-data-state-num-active='(child.HasChildren, numAllowed.ToStringInvariant())'
-                    attr-data-state-num-total='(child.HasChildren, numTotal.ToStringInvariant())'
                     data-name="@(Model.PermissionTree.GetDisplayName(child))"
                     data-title="@child.Value.SystemName">
                     @if (child.HasChildren)
