--- a/src/Smartstore.Web/Areas/Admin/Views/CustomerRole/_PermissionNode.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/CustomerRole/_PermissionNode.cshtml
@@ -11,7 +11,10 @@
             data-state-value="@(child.Value.Allow.HasValue ? (child.Value.Allow.Value ? 2 : 1) : 0)"
             data-name="@(permissionTree.GetDisplayName(child))"
             data-title="@child.Value.SystemName">
-            <partial name="_PermissionNode" model="child" />
+            @if (child.HasChildren)
+            {
+                <partial name="_PermissionNode" model="child" />
+            }
         </li>
     }
 </ul>
