--- a/src/Smartstore.Web/Areas/Admin/Views/Export/ProfileFileDetails.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Export/ProfileFileDetails.cshtml
@@ -31,7 +31,7 @@
     @foreach (var grp in Model.PublicFiles.OrderBy(x => x.StoreId).GroupBy(x => x.StoreId))
 	{
 		var storeName = grp.First().StoreName;
-		<div class="mt-3">
+		<div class="mb-3">
 			<div>
 				<span class="fs-h6 fwm">@T("Admin.Common.PublicFiles")</span>
 				<span class="smaller">(@(storeName.HasValue() ? storeName : allStoresString))</span>
@@ -39,7 +39,7 @@
 			@foreach (var file in grp)
 			{
 				<div class="py-1 copy-to-clipboard">
-					<div class="hstack gap-1">
+                    <div>
 						<span class="badge @(file.RelatedType.HasValue ? "badge-secondary" : "badge-success")">
 							<file-icon file-extension="@file.File.Extension" />
 							@(file.Label.HasValue() ? file.Label : file.File.Extension.EmptyNull().ToLower().TrimStart('.'))
