AccessKit: Reworked Disclosure plugin according to review

--- a/src/Smartstore.Web/Views/Shared/Partials/Search.Filters.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Search.Filters.cshtml
@@ -28,7 +28,7 @@
             <a class="facet-group-header">
                 <span>@T("Categories.OrderBy")</span>
             </a>
-            <div class="facet-body" aria-expanded="true">
+            <div class="facet-body">
                 <div class="facet-body-inner offcanvas-hstack hstack overflow-x-auto gap-1 small">
                     @foreach (var sort in Model.AvailableSortOptions)
                     {
