--- a/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
+++ b/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
@@ -872,6 +872,10 @@ $img-margin-right: 10px;
     }
 }
 
+.note-video-clip {
+    max-width: 100%;
+}
+
 
 // Emojis
 // ------------------------------------------
